-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.0.0-rc1
-
None
-
d3d3ae70de7a53c73a5538ccf945faf922347755
Crash when entering created Tab Component
(1) Take any TabView.
(2) Add a Tab using the context menu.
(3) Enter the Tab Component using the context menu for F2
(4) Select the root item
Result: crash
This seems to happen because of the new "anchoring indicator feature".
The root item is anchored, but there is no parent item.
QmlDesignerd.dll!QmlDesigner::NodeInstanceView::instanceForModelNode(const QmlDesigner::ModelNode & node={...}) Line 581 + 0x24 bytes C++ QmlDesignerd.dll!QmlDesigner::QmlObjectNode::nodeInstance() Line 433 + 0x30 bytes C++ QmlDesignerd.dll!QmlDesigner::QmlItemNode::instanceBoundingRect() Line 417 + 0x10 bytes C++ QmlDesignerd.dll!QmlDesigner::createParentAnchorPoint(const QmlDesigner::QmlItemNode & parentQmlItemNode={...}, QmlDesigner::AnchorLine::Type anchorLineType=Top, const QmlDesigner::QmlItemNode & childQmlItemNode={...}) Line 112 + 0x36 bytes C++ QmlDesignerd.dll!QmlDesigner::AnchorIndicatorGraphicsItem::updateAnchorIndicator(const QmlDesigner::AnchorLine & sourceAnchorLine={...}, QmlDesigner::AnchorLine targetAnchorLine={...}) Line 220 + 0x6d bytes C++ QmlDesignerd.dll!QmlDesigner::AnchorIndicator::setItems(const QList<QmlDesigner::FormEditorItem *> & itemList={...}) Line 103 + 0x6d bytes C++ QmlDesignerd.dll!QmlDesigner::SelectionTool::selectedItemsChanged(const QList<QmlDesigner::FormEditorItem *> & itemList={...}) Line 263 C++ QmlDesignerd.dll!QmlDesigner::AbstractFormEditorTool::setItems(const QList<QmlDesigner::FormEditorItem *> & itemList={...}) Line 73 C++ QmlDesignerd.dll!QmlDesigner::FormEditorView::selectedNodesChanged(const QList<QmlDesigner::ModelNode> & selectedNodeList={...}, const QList<QmlDesigner::ModelNode> & __formal={...}) Line 289 + 0x53 bytes C++ QmlDesignerd.dll!QmlDesigner::Internal::ModelPrivate::changeSelectedNodes(const QList<QSharedPointer<QmlDesigner::Internal::InternalNode> > & newSelectedNodeList={...}, const QList<QSharedPointer<QmlDesigner::Internal::InternalNode> > & oldSelectedNodeList={...}) Line 1366 + 0x6f bytes C++ QmlDesignerd.dll!QmlDesigner::Internal::ModelPrivate::setSelectedNodes(const QList<QSharedPointer<QmlDesigner::Internal::InternalNode> > & selectedNodeList={...}) Line 1315 C++ QmlDesignerd.dll!QmlDesigner::AbstractView::setSelectedModelNodes(const QList<QmlDesigner::ModelNode> & selectedNodeList={...}) Line 300 + 0x34 bytes C++ QmlDesignerd.dll!QmlDesigner::NavigatorView::changeSelection(const QItemSelection & __formal={...}, const QItemSelection & __formal={...}) Line 402 + 0x37 bytes C++