QmlDesigner: No anchor indicators for root items

Task-number: QTCREATORBUG-10183
Change-Id: I4be06625a59ece3a99e9ebeb0adf0dbd5eff2c5b
Reviewed-by: Thomas Hartmann <Thomas.Hartmann@digia.com>