src/plugins/qmldesigner/components/formeditor/anchorindicator.cpp
@@ -95,30 +95,32 @@ void AnchorIndicator::setItems(const QList<FormEditorItem *> &itemList)
     if (itemList.count() == 1) {
         m_formEditorItem = itemList.first();
         QmlItemNode sourceQmlItemNode = m_formEditorItem->qmlItemNode();
-        QmlAnchors qmlAnchors = sourceQmlItemNode.anchors();
+        if (!sourceQmlItemNode.modelNode().isRootNode()) {
+            QmlAnchors qmlAnchors = sourceQmlItemNode.anchors();
 
-        if (qmlAnchors.modelHasAnchor(AnchorLine::Top)) {
-            m_indicatorTopShape = new AnchorIndicatorGraphicsItem(m_layerItem.data());
-            m_indicatorTopShape->updateAnchorIndicator(AnchorLine(sourceQmlItemNode, AnchorLine::Top),
-                                                         qmlAnchors.modelAnchor(AnchorLine::Top));
-        }
+            if (qmlAnchors.modelHasAnchor(AnchorLine::Top)) {
+                m_indicatorTopShape = new AnchorIndicatorGraphicsItem(m_layerItem.data());
+                m_indicatorTopShape->updateAnchorIndicator(AnchorLine(sourceQmlItemNode, AnchorLine::Top),
+                                                           qmlAnchors.modelAnchor(AnchorLine::Top));
+            }
 
-        if (qmlAnchors.modelHasAnchor(AnchorLine::Bottom)) {
-            m_indicatorBottomShape = new AnchorIndicatorGraphicsItem(m_layerItem.data());
-            m_indicatorBottomShape->updateAnchorIndicator(AnchorLine(sourceQmlItemNode, AnchorLine::Bottom),
-                                                         qmlAnchors.modelAnchor(AnchorLine::Bottom));
-        }
+            if (qmlAnchors.modelHasAnchor(AnchorLine::Bottom)) {
+                m_indicatorBottomShape = new AnchorIndicatorGraphicsItem(m_layerItem.data());
+                m_indicatorBottomShape->updateAnchorIndicator(AnchorLine(sourceQmlItemNode, AnchorLine::Bottom),
+                                                              qmlAnchors.modelAnchor(AnchorLine::Bottom));
+            }
 
-        if (qmlAnchors.modelHasAnchor(AnchorLine::Left)) {
-            m_indicatorLeftShape = new AnchorIndicatorGraphicsItem(m_layerItem.data());
-            m_indicatorLeftShape->updateAnchorIndicator(AnchorLine(sourceQmlItemNode, AnchorLine::Left),
-                                                         qmlAnchors.modelAnchor(AnchorLine::Left));
-        }
+            if (qmlAnchors.modelHasAnchor(AnchorLine::Left)) {
+                m_indicatorLeftShape = new AnchorIndicatorGraphicsItem(m_layerItem.data());
+                m_indicatorLeftShape->updateAnchorIndicator(AnchorLine(sourceQmlItemNode, AnchorLine::Left),
+                                                            qmlAnchors.modelAnchor(AnchorLine::Left));
+            }
 
-        if (qmlAnchors.modelHasAnchor(AnchorLine::Right)) {
-            m_indicatorRightShape = new AnchorIndicatorGraphicsItem(m_layerItem.data());
-            m_indicatorRightShape->updateAnchorIndicator(AnchorLine(sourceQmlItemNode, AnchorLine::Right),
-                                                         qmlAnchors.modelAnchor(AnchorLine::Right));
+            if (qmlAnchors.modelHasAnchor(AnchorLine::Right)) {
+                m_indicatorRightShape = new AnchorIndicatorGraphicsItem(m_layerItem.data());
+                m_indicatorRightShape->updateAnchorIndicator(AnchorLine(sourceQmlItemNode, AnchorLine::Right),
+                                                             qmlAnchors.modelAnchor(AnchorLine::Right));
+            }
         }
     }
 }
@@ -128,42 +130,44 @@ void AnchorIndicator::updateItems(const QList<FormEditorItem *> &itemList)
     foreach (FormEditorItem *formEditorItem, itemList) {
         if (formEditorItem == m_formEditorItem) {
             QmlItemNode sourceQmlItemNode = m_formEditorItem->qmlItemNode();
-            QmlAnchors qmlAnchors = formEditorItem->qmlItemNode().anchors();
+            if (!sourceQmlItemNode.modelNode().isRootNode()) {
+                QmlAnchors qmlAnchors = formEditorItem->qmlItemNode().anchors();
 
-            if (qmlAnchors.modelHasAnchor(AnchorLine::Top)) {
-                if (m_indicatorTopShape.isNull())
-                    m_indicatorTopShape = new AnchorIndicatorGraphicsItem(m_layerItem.data());
-                m_indicatorTopShape->updateAnchorIndicator(AnchorLine(sourceQmlItemNode, AnchorLine::Top),
-                                                             qmlAnchors.modelAnchor(AnchorLine::Top));
-            } else {
-                delete m_indicatorTopShape;
-            }
+                if (qmlAnchors.modelHasAnchor(AnchorLine::Top)) {
+                    if (m_indicatorTopShape.isNull())
+                        m_indicatorTopShape = new AnchorIndicatorGraphicsItem(m_layerItem.data());
+                    m_indicatorTopShape->updateAnchorIndicator(AnchorLine(sourceQmlItemNode, AnchorLine::Top),
+                                                               qmlAnchors.modelAnchor(AnchorLine::Top));
+                } else {
+                    delete m_indicatorTopShape;
+                }
 
-            if (qmlAnchors.modelHasAnchor(AnchorLine::Bottom)) {
-                if (m_indicatorBottomShape.isNull())
-                    m_indicatorBottomShape = new AnchorIndicatorGraphicsItem(m_layerItem.data());
-                m_indicatorBottomShape->updateAnchorIndicator(AnchorLine(sourceQmlItemNode, AnchorLine::Bottom),
-                                                             qmlAnchors.modelAnchor(AnchorLine::Bottom));
-            } else {
-                delete m_indicatorBottomShape;
-            }
+                if (qmlAnchors.modelHasAnchor(AnchorLine::Bottom)) {
+                    if (m_indicatorBottomShape.isNull())
+                        m_indicatorBottomShape = new AnchorIndicatorGraphicsItem(m_layerItem.data());
+                    m_indicatorBottomShape->updateAnchorIndicator(AnchorLine(sourceQmlItemNode, AnchorLine::Bottom),
+                                                                  qmlAnchors.modelAnchor(AnchorLine::Bottom));
+                } else {
+                    delete m_indicatorBottomShape;
+                }
 
-            if (qmlAnchors.modelHasAnchor(AnchorLine::Left)) {
-                if (m_indicatorLeftShape.isNull())
-                    m_indicatorLeftShape = new AnchorIndicatorGraphicsItem(m_layerItem.data());
-                m_indicatorLeftShape->updateAnchorIndicator(AnchorLine(sourceQmlItemNode, AnchorLine::Left),
-                                                             qmlAnchors.modelAnchor(AnchorLine::Left));
-            } else {
-                delete m_indicatorLeftShape;
-            }
+                if (qmlAnchors.modelHasAnchor(AnchorLine::Left)) {
+                    if (m_indicatorLeftShape.isNull())
+                        m_indicatorLeftShape = new AnchorIndicatorGraphicsItem(m_layerItem.data());
+                    m_indicatorLeftShape->updateAnchorIndicator(AnchorLine(sourceQmlItemNode, AnchorLine::Left),
+                                                                qmlAnchors.modelAnchor(AnchorLine::Left));
+                } else {
+                    delete m_indicatorLeftShape;
+                }
 
-            if (qmlAnchors.modelHasAnchor(AnchorLine::Right)) {
-                if (m_indicatorRightShape.isNull())
-                    m_indicatorRightShape = new AnchorIndicatorGraphicsItem(m_layerItem.data());
-                m_indicatorRightShape->updateAnchorIndicator(AnchorLine(sourceQmlItemNode, AnchorLine::Right),
-                                                             qmlAnchors.modelAnchor(AnchorLine::Right));
-            } else {
-                delete m_indicatorRightShape;
+                if (qmlAnchors.modelHasAnchor(AnchorLine::Right)) {
+                    if (m_indicatorRightShape.isNull())
+                        m_indicatorRightShape = new AnchorIndicatorGraphicsItem(m_layerItem.data());
+                    m_indicatorRightShape->updateAnchorIndicator(AnchorLine(sourceQmlItemNode, AnchorLine::Right),
+                                                                 qmlAnchors.modelAnchor(AnchorLine::Right));
+                } else {
+                    delete m_indicatorRightShape;
+                }
             }
 
             return;
